Public API draft.